exports[`fjs simple-block-comment 0`] = `
"/*
 * comment
 */
1 + 1;
"
`;

exports[`fjs simple-comment 0`] = `
"// This is a comment
1 + 1;
"
`;

exports[`fjs large-numbers 0`] = `
"100000000000000000000123456789;
"
`;

exports[`fjs variable-declarations 0`] = `
"var foo, bar;
var baz;
let buz = 1;
const qux = { one: 1, two: 2 };
"
`;

exports[`fjs works 0`] = `
"1 + 1;
"
`;

exports[`fjs simple-scope-breaking 0`] = `
"const foo = {
  meh: 'reasonably long value',
  meh2: 'this one will make things wrap, hopefully...',
};
"
`;

exports[`fjs changes-quotes 0`] = `
"let x = 'foobar';
x = 'foobar';
x = '"';
x = '"';
// Note that snapshot testing cannot properly generate a snapshot for these
// test cases. They are:
// x = single quote, escape, single quote, single quote
// x = double quote, single quote, double quote
broken;
"
`;

exports[`fjs string-escapes 0`] = `
"// Note that snapshot testing cannot properly generate a snapshot for these
// test cases. They are:
// single quote, escape x 7, single quote, single quote
broken;
"
`;
